<resources>
    <string name="app_name">Pani Online</string>
    <string name="google_maps_key">AIzaSyD9HQynDDJmOLJqROGzKil4Icl4De5-INE</string>

    <!--Toolbar-->
    <string name="done">Done</string>

    <!--Welcome Screen-->
    <string name="enter_as_client">Enter as Client</string>
    <string name="enter_as_delivery">Enter as Delivery</string>
    <string name="enter_as_reseller">Enter as Reseller</string>
    <string name="book_appointment_to_recieve">Book an appointment to receive a range of services from an agent or a business nearby.</string>
    <string name="enjoy_services">Enjoy services from the comfort of your own home.</string>

    <!--Login Screen -->
    <string name="signup">Sign up</string>
    <string name="let_get_started">Let\'s get Started</string>
    <string name="login_book">Login/SignUp and book your water jar now.</string>
    <string name="email">Email</string>
    <string name="contact_no">Mobile No.</string>
    <string name="password">Password</string>
    <string name="forgot">Forgot?</string>
    <string name="login">Proceed</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">OR</string>

    <!--Account Verification-->
    <string name="enter_otp">Please verify your account by entering the 4-digit code sent to your registered mobile no.</string>
    <string name="resend_code">Resend code</string>
    <string name="verify">Verify</string>

    <!--Home-->
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="bookings">Bookings</string>
    <string name="cart">Cart</string>
    <string name="notifications">Notification</string>
    <string name="bisleri">Bisleri</string>
    <string name="welcome_user">Welcome User!</string>
    <string name="explore_more">Explore More</string>
    <string name="twenty_five_litres">(25 Litres)</string>

    <!--Description Page-->
    <string name="about_bisleri">A symbol of goodness, trust and purity, Bisleri has been a household name for decades. A leader in its category, it is the most trusted brand of mineral water in India. Having a strong presence, with 125 operational plants (13 owned) and a strong distribution network of 3000 Distributors.</string>

    <!--Checkout Page-->
    <string name="delivery">Delivery</string>
    <string name="payment">Payment</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total :</string>
    <string name="total_val">₹ 105.00</string>
    <string name="inr_symbol">₹</string>
    <string name="val_zero">₹ 00.00</string>
    <string name="confirm">Confirm</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="order_summary">Order Summary</string>
    <string name="qty">Qty :</string>
    <string name="bisleri_20">Bisleri (20 l)</string>
    <string name="qty_one">Qty: 1</string>
    <string name="choose">Choose</string>
    <string name="proceed">Proceed</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="payment_method">Payment Method</string>
    <string name="wallet_upi">Wallet / UPI</string>
    <string name="credit_debit">Credit / Debit / ATM Card</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="empty_cart">Cart Empty</string>
    <string name="item_added_to_cart">Added to Cart</string>
    <string name="no_items_in_cart">No Items In Cart!</string>
    <string name="delivery_status_pending">Pending</string>

    <string name="upi">UPI</string>
    <string name="cod">COD</string>
    <string name="no_upi_app_found">No UPI app found, please install one to continue</string>
    <string name="transaction_failed">Transaction failed.Please try again</string>
    <string name="payment_cancelled_by_user">Payment cancelled by user.</string>

    <string name="no_internet_connection">Please Check Your Internet Connection</string>

    <string name="have_a_promo_code">Have a promo code?</string>
    <string name="apply">Apply</string>

    <string name="no_address_available">No address found!</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--Add Address-->
    <string name="flat_building">House No. / Flat / Floor</string>
    <string name="colony_street">Colony / Street / Locality</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pincode">6 digits [0–9] PIN code</string>
    <string name="add_address">Add Address</string>
    <string name="add_new_address_validation">Please delete an address to add more</string>

    <string name="sample_address">S-80, 4th Floor, Shakarpur, School Block, Laxminagar, Delhi</string>

    <!--Settings-->
    <string name="user">User</string>
    <string name="likes_reviews_counts">02 Likes | 04 Reviews</string>
    <string name="reviews">Reviews</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="rate_us">Rate Us</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="faq">Faqs</string>
    <string name="signout">Sign out</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
