<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.welcomeScreen.WelcomeScreen">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_margin="@dimen/dp20"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/client_btn"
                style="@style/WelcomeScreenText"
                app:layout_constraintBottom_toTopOf="@id/agent_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/red_client_gradient"
                android:text="@string/enter_as_client" />

            <Button
                android:id="@+id/agent_btn"
                style="@style/WelcomeScreenText"
                android:layout_marginBottom="@dimen/dp15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/business_btn"
                android:background="@drawable/light_agent_gredient"
                android:text="@string/enter_as_delivery" />

            <Button
                android:id="@+id/business_btn"
                style="@style/WelcomeScreenText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/dark_red_business_gradient"
                android:text="@string/enter_as_reseller" />

            <LinearLayout
                android:id="@+id/tutorial_pager_circle_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp10"
                android:layout_marginTop="@dimen/dp10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/business_btn"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="@dimen/dp5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>

