<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.accountVerification.AccountVerificationActivity">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar_layout" />

        <TextView
            android:id="@+id/verification_code_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginRight="@dimen/dp20"
            android:paddingBottom="@dimen/dp15"
            android:text="@string/enter_otp"
            android:textAppearance="@style/Regular_black_18_text"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/otp_one"
            style="@style/OTPText"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/otp_two"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/verification_code_tv" />

        <EditText
            android:id="@+id/otp_two"
            style="@style/OTPText"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/otp_three"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/otp_one"
            app:layout_constraintTop_toBottomOf="@id/verification_code_tv" />

        <EditText
            android:id="@+id/otp_three"
            style="@style/OTPText"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/otp_four"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/otp_two"
            app:layout_constraintTop_toBottomOf="@id/verification_code_tv" />

        <EditText
            android:id="@+id/otp_four"
            style="@style/OTPText"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/otp_three"
            app:layout_constraintTop_toBottomOf="@id/verification_code_tv" />

        <TextView
            android:id="@+id/timer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dp40"
            android:layout_marginTop="@dimen/dp20"
            android:text="00:60"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_15"
            app:layout_constraintTop_toBottomOf="@id/otp_four"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/tvResendOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp20"
            android:layout_marginTop="@dimen/dp30"
            android:padding="@dimen/dp5"
            android:text="@string/resend_code"
            android:textAppearance="@style/Regular_black_18_text"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_15"
            app:layout_constraintTop_toBottomOf="@id/timer_tv"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/verify_otp_tv"
            style="@style/SigninButton"
            android:text="@string/verify"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="@dimen/dp20"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

